Updated HAProxy for Metasploit backend

--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -39,7 +39,9 @@ frontend http
 	option forwardfor
 
 	acl invoices path -i -m beg /invoice/
+	acl msf	     path -i -m beg /MSF/
 	use_backend apache if invoices
+	use_backend apache if msf
 
 	default_backend covenant
 
@@ -50,3 +52,7 @@ backend covenant
 backend apache
 	mode http
 	server apache 127.0.0.1:6665 check
+
+backend metasploit
+	mode http
+	server metasploit 127.0.0.1:4444 check
