--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -39,9 +39,9 @@ frontend http
 	option forwardfor
 
 	acl invoices path -i -m beg /invoice/
-	acl msf	     path -i -m beg /MSF/
-	use_backend apache if invoices
-	use_backend apache if msf
+	acl msf	     path -i -m beg /MSF
+	use_backend apache 	if invoices
+	use_backend metasploit 	if msf
 
 	default_backend covenant
 
