--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -36,23 +36,37 @@ defaults
 
 frontend http
 	bind 0.0.0.0:80
+	option http-server-close
 	option forwardfor
 
-	acl invoices path -i -m beg /invoice/
+	acl invoices path -i -m beg /invoices/
 	acl msf	     path -i -m beg /MSF
+	acl pivot    path -i -m beg /en-gb
 	use_backend apache 	if invoices
 	use_backend metasploit 	if msf
+	use_backend pivot 	if pivot
 
 	default_backend covenant
 
 backend covenant
 	mode http 
+	#option forwardfor
 	server covenant 127.0.0.1:6666 check
+
+backend pivot
+	mode http
+	server pivot 127.0.0.1:6665 check
 
 backend apache
 	mode http
-	server apache 127.0.0.1:6665 check
+	#option forwardfor
+	server apache 127.0.0.1:6664 check
 
 backend metasploit
 	mode http
+	#option forwardfor
+	#SetEnvIf X-Forwarded-For (.*) REMOTE_ADDR=$1
+	#SetEnvIf X-Forwarded-For (.*) REMOTE_IP=$1
+	#option forwardfor header X-Client-IP
+	#option forwardfor header X-Forwarded-For
 	server metasploit 127.0.0.1:6667 check
