Adding SSL configuration options

--- a/config.yml.example
+++ b/config.yml.example
@@ -11,6 +11,9 @@ listeners:
           listenerType: HTTP
           name: "CRTO-Lab-HTTP"
           useSSL: false
+          sslCertificate: ""
+          sslCertificatePassword: ""
+          sslCertHash: ""
           description: "Listener for CRTO Lab"
           bindAddress: 127.0.0.1
           bindPort: 6666
