Add HTTPS front end to HAProxy config

--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -11,11 +11,15 @@ global
 	# Default SSL material locations
 	ca-base /etc/ssl/certs
 	crt-base /etc/ssl/private
+    # nb. Covenant 0.6 requires force-tlsv10 and weak ciphers for HTTP grunts to connect 
+	# See: https://ssl-config.mozilla.org/#server=haproxy&version=2.0.3&config=old&openssl=1.1.1d&hsts=false&ocsp=false&guideline=5.6
+    ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-EC>
+    ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
+    ssl-default-bind-options no-sslv3 no-tls-tickets
 
-	# See: https://ssl-config.mozilla.org/#server=haproxy&server-version=2.0.3&config=intermediate
-        ssl-default-bind-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384
-        ssl-default-bind-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
-        ssl-default-bind-options ssl-min-ver TLSv1.2 no-tls-tickets
+    ssl-default-server-ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE->
+    ssl-default-server-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
+    ssl-default-server-options no-sslv3 no-tls-tickets
 
 defaults
 	log	global
@@ -48,10 +52,23 @@ frontend http
 
 	default_backend covenant
 
+# nb. Covenant 0.6 requires force-tlsv10 and weak ciphers for HTTP grunts to connect
+frontend https
+    bind 0.0.0.0:443 ssl crt /opt/Covenant/Covenant/certs/covenant.pem force-tlsv10 verify none
+    mode http
+    use_backend covenant_https if { path -i -m beg /suls/ }
+    use_backend metasploit_https if { path -i -m beg /met/ }
+
+    default_backend covenant_https
+
 backend covenant
 	mode http 
 	#option forwardfor
 	server covenant 127.0.0.1:6666 check
+
+backend covenant_https
+    mode http
+    server covenant_https 127.0.0.1:6668 check ssl verify none
 
 backend pivot
 	mode http
@@ -70,3 +87,7 @@ backend metasploit
 	#option forwardfor header X-Client-IP
 	#option forwardfor header X-Forwarded-For
 	server metasploit 127.0.0.1:6667 check
+
+backend metasploit_https
+    mode http
+    server metepreter_https 127.0.0.1:6669 check ssl verify none
