Updated covenant.service to publish and run release rather than debugging

--- a/supporting/covenant.service
+++ b/supporting/covenant.service
@@ -7,7 +7,8 @@ Type=simple
 User=root
 Group=root
 WorkingDirectory=/opt/Covenant/Covenant
-ExecStart=/usr/bin/dotnet run
+ExecStartPre=/usr/bin/dotnet publish -c Release  
+ExecStart=/usr/bin/dotnet /opt/Covenant/Covenant/bin/Release/netcoreapp3.1/Covenant.dll
 RemainAfterExit=true
 #ExecStop=/opt/foo/teardown-foo.sh
 StandardOutput=journal
