Reconfiguring ports so that it is apache, msf and then pivots

--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -46,9 +46,11 @@ frontend http
 	acl invoices path -i -m beg /invoices/
 	acl msf	     path -i -m beg /MSF
 	acl pivot    path -i -m beg /en-gb
+	acl pivot2    path -i -m beg /en-au
 	use_backend apache 	if invoices
 	use_backend metasploit 	if msf
 	use_backend pivot 	if pivot
+	use_backend pivot2 	if pivot2
 
 	default_backend covenant
 
@@ -72,7 +74,11 @@ backend covenant_https
 
 backend pivot
 	mode http
-	server pivot 127.0.0.1:6665 check
+	server pivot 127.0.0.1:6667 check
+
+backend pivot2
+	mode http
+	server pivot 127.0.0.1:6668 check
 
 backend apache
 	mode http
@@ -82,11 +88,7 @@ backend apache
 backend metasploit
 	mode http
 	#option forwardfor
-	#SetEnvIf X-Forwarded-For (.*) REMOTE_ADDR=$1
-	#SetEnvIf X-Forwarded-For (.*) REMOTE_IP=$1
-	#option forwardfor header X-Client-IP
-	#option forwardfor header X-Forwarded-For
-	server metasploit 127.0.0.1:6667 check
+	server metasploit 127.0.0.1:6665 check
 
 backend metasploit_https
 	mode http
