Updated HAProxy to give a configuration for cobaltstrike where client IP's are visible on targets instead of the proxy relay

--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -21,14 +21,19 @@ global
 	ssl-default-server-ciphersuites TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256
 	ssl-default-server-options no-sslv3 no-tls-tickets
 
+	# Make headers Case Sensitive to play nice with cobaltstrike
+	h1-case-adjust x-forwarded-for X-Forwarded-For
+    h1-case-adjust x-real-ip X-Real-IP
+
+
 defaults
 	log	global
 	mode	http
 	option	httplog
 	option	dontlognull
-		timeout connect 5000
-		timeout client  50000
-		timeout server  50000
+	timeout connect 5000
+	timeout client  50000
+	timeout server  50000
 	errorfile 400 /etc/haproxy/errors/400.http
 	errorfile 403 /etc/haproxy/errors/403.http
 	errorfile 408 /etc/haproxy/errors/408.http
@@ -46,11 +51,14 @@ frontend http
 	acl invoices path -i -m beg /invoices/
 	acl msf	     path -i -m beg /MSF
 	acl pivot    path -i -m beg /en-gb
-	acl pivot2    path -i -m beg /en-au
+	acl pivot2   path -i -m beg /en-au
+	acl cobalt	 path -i -m beg /api
+
 	use_backend apache 	if invoices
 	use_backend metasploit 	if msf
 	use_backend pivot 	if pivot
 	use_backend pivot2 	if pivot2
+	use_backend cobaltstrike if cobalt
 
 	default_backend covenant
 
@@ -83,7 +91,7 @@ backend pivot2
 backend apache
 	mode http
 	#option forwardfor
-	server apache 127.0.0.1:6664 check
+	server apache 127.0.0.1:6663 check
 
 backend metasploit
 	mode http
@@ -92,4 +100,11 @@ backend metasploit
 
 backend metasploit_https
 	mode http
-	server metepreter_https 127.0.0.1:6669 check ssl verify none
+	server metepreter_https 127.0.0.1:6664 check ssl verify none
+
+backend cobaltstrike
+        mode http
+        option forwardfor
+        http-request set-header X-Real-IP %[src]
+        option h1-case-adjust-bogus-server
+        server covenant 127.0.0.1:7777 check
