Added capture of X-Forwarded-For header when haproxy behind an up-stream proxy

--- a/supporting/haproxy.cfg
+++ b/supporting/haproxy.cfg
@@ -47,6 +47,7 @@ frontend http
 	bind 0.0.0.0:80
 	option http-server-close
 	option forwardfor
+	capture request header X-Forwarded-For len 15
 
 	acl invoices path -i -m beg /invoices/
 	acl msf	     path -i -m beg /MSF
@@ -66,6 +67,8 @@ frontend http
 frontend https
 	bind 0.0.0.0:443 ssl crt /opt/Covenant/Covenant/certs/covenant.pem force-tlsv10 verify none
 	mode http
+	capture request header X-Forwarded-For len 15
+
 	use_backend covenant_https if { path -i -m beg /suls/ }
 	use_backend metasploit_https if { path -i -m beg /met/ }
 
